exports[`<Menu /> renders children correctly 1`] = `
<ul
  className="jHSOkj">
  <li
    className="iWVFUU" />
  <span
    collapse={undefined}>
    Child
  </span>
</ul>
`;

exports[`<Menu /> renders correctly with collapse option 1`] = `
<ul
  className="jHSOkj">
  <li
    className="jvSApm" />
</ul>
`;

exports[`<Menu /> renders correctly with default options 1`] = `
<ul
  className="jHSOkj">
  <li
    className="iWVFUU" />
</ul>
`;

exports[`<Menu /> renders correctly with header 1`] = `
<ul
  className="jHSOkj">
  <li
    className="iWVFUU">
    A Header
  </li>
</ul>
`;

exports[`<Menu /> renders correctly with theme 1`] = `
<ul
  className="jHSOkj">
  <li
    className="bZjOvQ" />
</ul>
`;
